--- a/release/release.org
+++ b/release/release.org
@@ -5,7 +5,7 @@
 	longer supported and suggests looking at diagrams-core, etc.
   + [X] showOrigin function
   + [X] aTR -> alignTR and so on
-  + [ ] Work a bit more on tutorial ... just enough to get people
+  + [X] Work a bit more on tutorial ... just enough to get people
         started.
   + [ ] Write release announcement. Right after uploading, post on
     - [ ] Haskell, cafe
