--- a/release/release.org
+++ b/release/release.org
@@ -8,12 +8,12 @@
           commentable etc. version...?)
   + [-] tickets to resolve
     - [ ] [[http://code.google.com/p/diagrams/issues/detail%3Fid%3D1&colspec%3DID%20Type%20Status%20Priority%20Difficulty%20Milestone%20Component%20Owner%20Summary][#1: test suites]]
-    - [ ] [[http://code.google.com/p/diagrams/issues/detail%3Fid%3D2&colspec%3DID%20Type%20Status%20Priority%20Difficulty%20Milestone%20Component%20Owner%20Summary][#2: polygon stuff from Dmidtry]]
+    - [X] [[http://code.google.com/p/diagrams/issues/detail%3Fid%3D2&colspec%3DID%20Type%20Status%20Priority%20Difficulty%20Milestone%20Component%20Owner%20Summary][#2: polygon stuff from Dmitry]]
     - [ ] [[http://code.google.com/p/diagrams/issues/detail%3Fid%3D6&colspec%3DID%20Type%20Status%20Priority%20Difficulty%20Milestone%20Component%20Owner%20Summary][#6: new logo]]
     - [X] [[http://code.google.com/p/diagrams/issues/detail%3Fid%3D18&colspec%3DID%20Type%20Status%20Priority%20Difficulty%20Milestone%20Component%20Owner%20Summary][#18: high-level path construction]]
     - [ ] [[http://code.google.com/p/diagrams/issues/detail%3Fid%3D26&colspec%3DID%20Type%20Status%20Priority%20Difficulty%20Milestone%20Component%20Owner%20Summary][#26: add support for path-oriented diagrams]]
     - [ ] [[http://code.google.com/p/diagrams/issues/detail%3Fid%3D27&colspec%3DID%20Type%20Status%20Priority%20Difficulty%20Milestone%20Component%20Owner%20Summary][#27: cairo handling of command-line w/h]]
-    - [ ] [[http://code.google.com/p/diagrams/issues/detail%3Fid%3D28&colspec%3DID%20Type%20Status%20Priority%20Difficulty%20Milestone%20Component%20Owner%20Summary][#28: user-controlled fill rule for paths]]
+    - [X] [[http://code.google.com/p/diagrams/issues/detail%3Fid%3D28&colspec%3DID%20Type%20Status%20Priority%20Difficulty%20Milestone%20Component%20Owner%20Summary][#28: user-controlled fill rule for paths]]
   + [ ] release SVG backend
   + [ ] write announcement for blog + email
   + [ ] create diagrams-contrib repository and create a module or two
