update HCAR file from Janis V.

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -1,6 +1,6 @@
 % diagrams-Bd.tex
 \begin{hcarentry}[updated]{diagrams}
-\report{Brent Yorgey}%05/11
+\report{Brent Yorgey}%11/11
 \status{active development}
 \participants{Ryan Yates}
 \makeheader
@@ -44,6 +44,8 @@ custom Gtk application for editing diagrams, and any other awesome
 stuff we think of.
 
 \FurtherReading
-\url{http://projects.haskell.org/diagrams}
-\url{http://code.google.com/p/diagrams/issues/list}
+\begin{compactitem}
+\item \url{http://projects.haskell.org/diagrams}
+\item \url{http://code.google.com/p/diagrams/issues/list}
+\end{compactitem}
 \end{hcarentry}
