--- a/release/release.org
+++ b/release/release.org
@@ -8,6 +8,7 @@
      - [X] ghc 7.2.1
      - [X] ghc 7.4.1 (with darcs gtk2hs)
      - [ ] ghc 7.4.1 (after new gtk2hs release)
+     - [X] update tested-with fields
   + [X] update LICENSE files
   + [ ] write announcement for blog + email
     + [ ] list major new features since 0.4
@@ -20,6 +21,7 @@
     + [ ] lib
     + [ ] cairo
     + [ ] contrib
+  + [ ] add release date to releases.markdown
   + [ ] upload
     + [ ] active
     + [ ] diagrams-core
