a couple last todos before release

--- a/release/release.org
+++ b/release/release.org
@@ -10,12 +10,14 @@
      - [ ] ghc 7.4.1 (after new gtk2hs release)
      - [X] update tested-with fields
   + [X] update LICENSE files
-  + [-] write announcement for blog + email
+  + [X] write announcement for blog + email
     + [X] list major new features since 0.4
     + [X] link to gallery (email)
-    + [ ] include some examples (blog)
+    + [X] include some examples (blog)
     + [X] say where/how to get involved
   + [X] build documentation
+  + [ ] documentation for animMain, and mention it in user manual
+  + [ ] note re: gtk2hs in 'diagrams' package header
   + [ ] add release date to all CHANGES files
     + [ ] core
     + [ ] active
